syntax = "proto3";

package io.github.uharaqo.es.grpc.proto;

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

service GrpcCommandHandler {
  rpc SendCommand (SendCommandRequest) returns (SendCommandResponse) {}
  rpc LoadState (LoadStateRequest) returns (LoadStateResponse) {}
}

message SendCommandRequest {
  /** Aggregate type */
  string aggregate = 1;
  /** Aggregate ID */
  string id = 2;
  /** Command */
  google.protobuf.Any payload = 3;
}

message SendCommandResponse {
  int64 version = 1;
  string message = 2;
}

message LoadStateRequest {
  /** Aggregate type */
  string type = 1;
  /** Aggregate ID */
  string id = 2;
  /** Minimum version (optional) */
  google.protobuf.Int64Value min_version = 3;
}

message LoadStateResponse {
  google.protobuf.Any result = 1;
}
